# dcsm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: dcsm.hpp
testing/dispatch/commands/: clearmask.cpp  copy.cpp  createmask.cpp  deletemask.cpp  framerate.cpp  get.cpp  identify.cpp  masks.cpp  mget.cpp  mset.cpp  patch.cpp  patches.cpp  ports.cpp  set.cpp  unpatch.cpp
testing/dispatch/direct_messages/: clrmu.cpp  copy.cpp  delmu.cpp  geta.cpp  getfr.cpp  getma.cpp  getmu.cpp  getu.cpp  id.cpp  listmu.cpp  listp.cpp  listu.cpp  newmu.cpp  patch.cpp  setfr.cpp  setmtv.cpp  setmu.cpp  setmv.cpp  setu.cpp  setutv.cpp  setv.cpp  unpat.cpp
